...
  /// The `title` property.
  var title: String {
    switch self {
    case .area:
      return "Area"
    case .diameter:
      return "Diameter"
    }
  }

  /// The `unit` property.
  var unit: String {
    switch self {
...
